--- a/PCHUBStore/PCHUBStore.csproj
+++ b/PCHUBStore/PCHUBStore.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="CloudinaryDotNet" Version="1.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.2" Condition="'$(Configuration)' == 'Debug'" />
@@ -22,6 +23,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PCHUBStore.Data\PCHUBStore.Data.csproj" />
+    <ProjectReference Include="..\PCHUBStore.Filter.Models\PCHUBStore.Filter.Models.csproj" />
+    <ProjectReference Include="..\PCHUBStore.View.Models\PCHUBStore.View.Models.csproj" />
   </ItemGroup>
 
 
