--- a/PCHUBStore.DemoTestEnvironment/PCHUBStore.DemoTestEnvironment.csproj
+++ b/PCHUBStore.DemoTestEnvironment/PCHUBStore.DemoTestEnvironment.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,11 +7,21 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PCHUBStore.Data\PCHUBStore.Data.csproj" />
     <ProjectReference Include="..\PCHUBStore.Services\PCHUBStore.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="SeedData\LaptopAdvancedCharacteristics.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="SeedData\LaptopBasicCharacteristics.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
