--- a/PCHUBStore.View.Models/PCHUBStore.View.Models.csproj
+++ b/PCHUBStore.View.Models/PCHUBStore.View.Models.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\PCHUBStore.Filter.Models\PCHUBStore.Filter.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="LaptopViewModels\" />
+  </ItemGroup>
+
 </Project>
