--- a/PCHUBStore/Properties/launchSettings.json
+++ b/PCHUBStore/Properties/launchSettings.json
@@ -1,7 +1,7 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:54190",
       "sslPort": 44330
@@ -12,16 +12,17 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
+        "SENDEMAILDEMO_ENVIRONMENT_SENDGRID_KEY": "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",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "PCHUBStore": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
