--- a/PCHUBStore/PCHUBStore.csproj
+++ b/PCHUBStore/PCHUBStore.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="CloudinaryDotNet" Version="1.10.0" />
+    <PackageReference Include="HtmlSanitizer" Version="5.0.310" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.1" />
