Minor Bug Fixes

--- a/PCHUBStore/appsettings.Development.json
+++ b/PCHUBStore/appsettings.Development.json
@@ -1,9 +1,17 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning"
     }
-  }
+  },
+  "Cloudinary": {
+    "CloudName": "dfj10j9ke",
+    "ApiKey": "344738316922676",
+    "ApiSecret": "9asZlgoLSrs0dcKiG9JOCltMxv0"
+  },
+
+  "AllowedHosts": "*"
 }
