shipment manager implemented

--- a/PCHUBStore/appsettings.json
+++ b/PCHUBStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=DESKTOP-SLBT47B\\SQLEXPRESS;Database=PCHUB;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
