--- a/PCHUBStore.Services/PCHUBStore.Services.csproj
+++ b/PCHUBStore.Services/PCHUBStore.Services.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.10.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.3" />
     <PackageReference Include="Sendgrid" Version="9.13.0" />
   </ItemGroup>
 
