--- a/PCHUBStore.Tests/PCHUBStore.Tests.csproj
+++ b/PCHUBStore.Tests/PCHUBStore.Tests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+    <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
@@ -18,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\PCHUBStore.Data\PCHUBStore.Data.csproj" />
     <ProjectReference Include="..\PCHUBStore.Services\PCHUBStore.Services.csproj" />
+    <ProjectReference Include="..\PCHUBStore\PCHUBStore.csproj" />
   </ItemGroup>
 
 </Project>
